--- a/package.json
+++ b/package.json
@@ -10,8 +10,50 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/app": "^20.3.0",
+    "@react-native-firebase/auth": "^20.3.0",
+    "@react-native-google-signin/google-signin": "^12.2.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/material-top-tabs": "^6.6.14",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@tsconfig/react-native": "^3.0.5",
+    "@types/jest": "^29.5.12",
+    "axios": "^1.7.3",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "i18n-js": "^4.4.3",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-animatable": "^1.4.0",
+    "react-native-asset": "^2.1.1",
+    "react-native-bootsplash": "^6.1.0",
+    "react-native-confirmation-code-field": "^7.4.0",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-encrypted-storage": "^4.0.3",
+    "react-native-fbsdk-next": "^13.0.0",
+    "react-native-gesture-handler": "^2.18.1",
+    "react-native-haptic-feedback": "^2.3.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-localization": "^2.3.2",
+    "react-native-localize": "^3.2.1",
+    "react-native-pager-view": "^6.3.3",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.15.0",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.34.0",
+    "react-native-sensitive-info": "^5.5.8",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^15.5.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.1.0",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-persist-sensitive-storage": "^1.0.0",
+    "yarn": "^1.22.22",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,14 +63,14 @@
     "@react-native/eslint-config": "0.74.87",
     "@react-native/metro-config": "0.74.87",
     "@react-native/typescript-config": "0.74.87",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
+    "@types/react": "^18.3.3",
+    "@types/react-test-renderer": "^18.3.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "5.3.3"
   },
   "engines": {
     "node": ">=18"
